<resources>
    <string name="app_name">ePOS2 SimpleSerial</string>

    <string name="app_title">ePOS2 SimpleSerial</string>
    <string name="btn_send">Send Command</string>
    <string name="btn_clear">Clear</string>
    <string name="title_data">Data</string>
    <string name="txt_data">Send data</string>
    <string name="txt_text">30 31 32 33 34 35 36 37 38 39 30 0A</string>
    <string name="target">TCP:192.168.192.168[local_serial]</string>
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="action_settings">Settings</string>
    <string name="txt_target">Target</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
</resources>
